# raycasting_of_a_csg_tree

./: .gitmodules  CMakeLists.txt  README.md
example_models/: csg_boxing_ring.txt  csg_cubes.txt  csg_model1.txt  csg_model_cos.txt  csg_model_cylinder.txt  csg_model_lot_of_spheres.txt  csg_ring.txt  model_csg_head_in_box.txt  model_csg_ser.txt
raycasting_of_a_csg_tree/: CMakeLists.txt  CSGTree.cpp  CSGTree.h  Camera.cpp  Camera.h  Constants.h  DevStruct.h  GPUdata.h  Light.h  Primitives.h  Scene.cpp  Sphere.cpp  Sphere.h  Test.cpp  Test.h  Texture.h  Tree.cpp  Tree.h  TreeParser.cpp  TreeParser.h  Window.cpp  Window.h  imgui.ini  kernels.cu  kernels.cuh  kernels.h  main.cpp  raycasting_of_a_csg_tree.cpp  raycasting_of_a_csg_tree.h  scene.h
